# virtualization-lab3

./: docker-compose.yaml
client/: Dockerfile  pyproject.toml
client/src/client/: run.py
server/: Dockerfile  message.txt  pyproject.toml
server/src/server/: __init__.py  app.py  run.py
