[project]
name = "client"
version = "0.1.0"
description = ""
authors = [
    {name = "ycalk",email = "alosev752@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "client", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
client = "client:run"
